--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<!-- <p>login works!</p> -->
+ <!DOCTYPE html>
+<html>
+<head>
+</head>
+<body>
+    <div class="layout">
+        <button class="login-button">Log In</button>
+        <div>
+        <button class="sign-up-button">Sign Up</button>
+        </div>
+    </div>
+</body>
+</html> 
+
