--- a/src/app/modules/portfolio/portfolio.component.html
+++ b/src/app/modules/portfolio/portfolio.component.html
@@ -1,164 +1,192 @@
-<div class="container">
-    <div class="header">
-        <p>22:00| 100MB/s</p>
-        <img src="assets/images/header.png">
-    </div>
-    <div class="header1">
-        <h3>Total Value</h3>
-        <h3>Total growth</h3>
-        <h3>Investments</h3>
-    </div>
-    <div class="header-body">
-        <p>$3446.00</p>
-        <p>$446.00</p>
-        <p style="margin-left: 45px;">36</p>
-    </div>
-    <hr style="width:400px">
-
-    <div class="risk">
-        <h4>High Risk</h4>
-
-        <div class="dropdown">
-            <img style="cursor:pointer ;" src="assets/images/filter.png">
-            <div class="dropdown-content">
-                <a href="#">Yearly View</a>
-
-                <a href="#">Monthly View</a>
-
-                <a href="#">Weekly View</a>
-                <div style="display: flex;">
-                    <a href="#">Calendar</a>
-                    <p style="margin-top: 13px;margin-left:40px;">&#9656;</p>
-                </div>
-            </div>
+<div class="mobile-container">
+    <div class="row">
+        <div class="col">
+            Total Value
+        </div>
+        <div class="col">
+            Total growth
+        </div>
+        <div class="col">
+            Investments
         </div>
     </div>
-
-
-
-    <div class="container1">
-        <div class="box1">
-            <div style="display:flex ;">
-                <p style="font-size:45px;color:#FFFFFF ;margin-left: 20px;">85%</p>
-                <p style="margin-top:35px;color:#FFFFFF;margin-left: 5px;">Cost</p>
-            </div>
-            <div style="color: #4FFF2C; font-size: 16px; position: absolute; left: 555px; top: 280px;">
-                Increase in Average
-            </div>
-
-
-            <div style="color: #FFFFFF; font-size: 16px; position: absolute; left: 720px; top: 380px;">
-                On 7th may,2023
-            </div>
-
-
+    <div class="row row-color-2">
+        <div class="col">
+            $3446.0
         </div>
-        <div class="risk1" style="display: flex;">
-            <h4 style="font-size:20px ;margin-top: 15px;">Medium Risk</h4>
+        <div class="col">
+            $446.00
+        </div>
+        <div class="col">
+            <p style="margin-left:30px">36</p>
+        </div>
+    </div>
+    <hr>
+
+
+    <div class="row ">
+        <div class="col2">
+            <b style="font-size: 20px;margin-left: 10px;">High Risk</b>
+
             <div class="dropdown">
-                <img style="margin-left: 150px;height:40px;margin-top: 10px;cursor: pointer;"
+                <img class="image-container"
+                    style="height:30px;width:30px;cursor:pointer;position: absolute;left:210px;bottom: 0;top: -20px;"
                     src="assets/images/filter.png">
                 <div class="dropdown-content">
-                    <a href="#">Yearly View</a>
+                    <a>Yearly View</a>
+
+                    <a>Monthly View</a>
+
+                    <a>Weekly View</a>
+                    <div class="calendar-link">
+                        <a>Calendar &#9656;</a>
+                        <div class="calendar-dropdown">
+                            <div class="box"></div>
+                            <div class="box3"></div>
+                            <div class="box4"></div>
+                        </div>
+                    </div>
 
 
                 </div>
+            </div>
+
+            <div class="card1" style="margin-top:20px">
+                <div style="display: flex;"><span style="font-size:50px;color: #FFFFFF;">85%</span>
+                    <p style="margin-top: 40px;color: #FFFFFF;">cost</p>
+                </div>
+                <span style="color: #2CFF41;">Increase in Average</span>
+                <br>
+                <br>
+                <br>
+
+                <span class="datetext" style="color:#FFFFFF ;">07 may,2023</span>
 
             </div>
+
         </div>
 
-        <div class="box1">
-            <div style="display:flex ;">
-                <p style="font-size:45px;color:#FFFFFF ;margin-left: 20px;">65%</p>
-                <p style="margin-top:35px;color:#FFFFFF;margin-left: 5px;">Income</p><br>
+    </div>
 
-            </div>
-
-            <div style="color: #4FFF2C; font-size: 16px; position: absolute; left: 550px; top: 530px;">
-                Increase in Average
-            </div>
-
-
-        </div>
-        <div class="risk2" style="display: flex;">
-            <h4 style="font-size:20px ;margin-top: 15px;">Low Risk</h4>
+    <div class="row ">
+        <div class="col2">
+            <b style="font-size: 20px;margin-left: 10px;">Medium Risk</b>
             <div class="dropdown">
-                <img style="margin-left: 180px;height:40px;margin-top: 10px;cursor: pointer;"
+                <img class="image-container"
+                    style="height:30px;cursor:pointer;position: absolute;left:160px;bottom: 0;top: -20px;"
                     src="assets/images/filter.png">
                 <div class="dropdown-content">
-                    <a href="#">Yearly View</a>
+                    <a>Yearly View</a>
 
-                    <a href="#">Monthly View</a>
 
-                    <a href="#">Weekly View</a>
-                    <div style="display: flex;">
-                        <a href="#">Calendar</a>
-                        <p style="margin-top: 13px;margin-left:40px;">&#9656;</p>
+                </div>
+            </div>
+
+
+            <div class="card1" style="margin-top:20px">
+                <div style="display: flex;"><span style="font-size:50px;color: #FFFFFF;">65%</span>
+                    <p style="margin-top: 40px;color: #FFFFFF;">cost</p>
+                </div>
+                <span style="color: #2CFF41;">Increase in Average</span>
+                <br>
+                <br>
+                <br>
+
+                <span class="datetext" style="color:#FFFFFF ;">07 may,2023</span>
+            </div>
+
+        </div>
+
+    </div>
+    <div class="row ">
+        <div class="col2">
+            <b style="font-size: 20px;margin-left: 10px;">Low Risk</b>
+            <div class="dropdown">
+                <div class="image-container">
+                    <img style="height:30px;cursor:pointer;position: absolute;left:200px;bottom: 0;top: -20px;"
+                        src="assets/images/filter.png">
+                </div>
+                <div class="dropdown-content">
+                    <a>Yearly View</a>
+
+                    <a>Monthly View</a>
+
+                    <a>Weekly View</a>
+                    <div class="calendar-link">
+                        <a>Calendar &#9656;</a>
+                        <div class="calendar-dropdown">
+                            <div class="box"></div>
+                            <div class="box3"></div>
+                            <div class="box4"></div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="box1">
-            <div style="display:flex ;">
-                <p style="font-size:45px;color:#FFFFFF ;margin-left: 20px;">85%</p>
-                <p style="margin-top:35px;color:#FFFFFF;margin-left: 5px;">Cost</p>
+
+            <div class="card1" style="margin-top: 20px;">
+                <div style="display: flex;"><span style="font-size:50px;color: #FFFFFF;">56%</span>
+                    <p style="margin-top: 40px;color: #FFFFFF;">cost</p>
+                </div>
+                <span style="color: #2CFF41;">Increase in Average</span>
+                <br>
+                <br>
+                <br>
+
+
+                <span class="datetext" style="color:#FFFFFF ;">07 may,2023</span>
             </div>
-            <div style="color: #4FFF2C; font-size: 16px; position: absolute; left: 550px; top: 780px;">
-                Increase in Average
-            </div>
-            <div style="color: #FFFFFF; font-size: 16px; position: absolute; left: 720px; top: 890px;">
-                On 7th may,2023
-            </div>
-        </div>
-
-        <hr style="width:400px">
-
-        <div style="display: flex; gap: 15px;margin-top: 20px;align-items: center;">
-            <img src="assets/images/funds.png" alt="Funds">
-            <img src="assets/images/Allocation.png" alt="Allocation">
-            <img src="assets/images/History.png" alt="History">
-            <img src="assets/images/performance.png" alt="Performance">
 
         </div>
-        <div style="display:flex;gap: 28px;font-size: 13px;margin-left: 20px;">
-            <p>Funds</p>
-            <p>Allocation</p>
-            <p>History</p>
-            <p>Performance</p>
-
-        </div>
-        <div><img style="height: 30px;" src="assets/images/slider.png"></div>
-        <hr style="width:400px">
-    </div>
-    <div class="goals">
-        <h1>Goal Setting</h1>
-
 
     </div>
+
+
+    <hr>
+
+
+    <div style="display: flex; gap: 15px;margin-top: 20px;align-items: center;margin-left: 30px;">
+        <img src="assets/images/funds.png" alt="Funds">
+        <img src="assets/images/Allocation.png" alt="Allocation">
+        <img src="assets/images/History.png" alt="History">
+        <img src="assets/images/performance.png" alt="Performance">
+
+    </div>
+    <div style="display:flex;gap: 28px;font-size: 13px;margin-left: 30px;">
+        <p>Funds</p>
+        <p>Allocation</p>
+        <p>History</p>
+        <p>Performance</p>
+
+    </div>
+    <div><img style="height: 30px;margin-left: 160px;" src="assets/images/slider.png"></div>
+
+
+    <hr>
+
+
+
+    <h5 style="font-size:25px;margin-left: 15px;">Goal Setting</h5>
     <div class="card-body">
 
-        <h2>Long term</h2>
+        <h2 style="margin-left:10px ;margin-top: 10px;">Long term</h2>
         <div style="display:flex ;">
-            <p>Equity Investment </p>
+            <p style="margin-left:10px ;">Equity Investment </p>
             <p style="margin-left: 130px;font-size:18px;color:#483699;"><b>70%</b></p>
         </div>
         <hr style="width:320px">
 
-        <h2>Short term</h2>
+        <h2 style="margin-left:10px ;margin-top: 10px;">Short term</h2>
         <div style="display:flex ;">
-            <p>Debt,Liquid funds, G sec</p>
+            <p style="margin-left:10px ;">Debt,Liquid funds, G sec</p>
             <p style="margin-left: 77px;font-size:18px;color:#483699;"><b>20%</b></p>
         </div>
         <hr style="width:320px">
-        <h2>Medium term</h2>
+        <h2 style="margin-left:10px ;margin-top: 10px;">Medium term</h2>
         <div style="display:flex ;">
-            <p>Mutual funds,FD</p>
+            <p style="margin-left:10px ;">Mutual funds,FD</p>
             <p style="margin-left: 130px;font-size:18px;color:#483699;"><b>10%</b></p>
         </div>
+
+
     </div>
-
-
-
-
-
 </div>
