--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,14 +1,22 @@
-<!-- <p>login works!</p> -->
+
  <!DOCTYPE html>
 <html>
 <head>
 </head>
 <body>
+     <div class="login-app-container">
+        <img src="../../../assets/images/Person.png" />
+        <img src="../../../assets/images/bank.png" class="img-bank"/>
+        <img src="../../../assets/images/money.png" class="img-money"/>
+        <img src="../../../assets/images/note.png" class="img-note"/>
+        <img src="../../../assets/images/path.png" class="img-path"/>
+        <img src="../../../assets/images/line.png" class="img-line" />
+      </div> 
     <div class="layout">
-        <button class="login-button">Log In</button>
-        <div>
+        <button class="login-button" routerLink= "/auth">Log In</button>
+    <div>
         <button class="sign-up-button">Sign Up</button>
-        </div>
+    </div>
     </div>
 </body>
 </html> 
