--- a/src/app/modules/login/login.component.scss
+++ b/src/app/modules/login/login.component.scss
@@ -23,3 +23,45 @@ html, body {
     border-radius:20px;
     margin-top:29px;
 }
+
+
+
+
+.login-app-container{
+    display: none;
+}
+@media (min-width: 412px) and (max-width:892px){
+    .login-app-container{
+        display: block;
+    }
+    .img-path{
+        position: absolute;
+        z-index: -1;
+        top: 80px;
+        left: 25px;
+    }
+    .img-money{
+        position: absolute;
+        top: 55px;
+        right: 0;
+        width: 25%;
+    }
+    .img-bank{
+        position: absolute;
+        top: 50px;
+        left: 10px;
+        width: 30%;
+    }
+    .img-note{
+        position: absolute;
+        top: 300px;
+        width: 20%;
+        left: 90px;
+    }
+    .img-line{
+        position: absolute;
+        top: 56px;
+        left: 123px;
+        width: 47%;
+    }
+}
