--- a/src/app/layout/login-header/login-header.component.scss
+++ b/src/app/layout/login-header/login-header.component.scss
@@ -36,3 +36,30 @@
         width: 47%;
     }
 }
+
+
+.form-control{
+    margin-bottom: 15px;
+}
+.form-control1{
+    margin-top: 50px;
+    margin-bottom: 1px;
+
+}
+.form-signup{
+    padding-left:75px;
+}
+.button{
+    width: 100%;
+    max-height: 100px;
+    border-radius: 20px;
+    background-color: rgb(162, 91, 228);
+}
+.form-control-details{
+    color: blueviolet;
+}
+input[type=text]{
+    border: none;
+   
+    border-bottom: 1px solid black;
+}
