--- a/src/app/layout/login-header/login-header.component.html
+++ b/src/app/layout/login-header/login-header.component.html
@@ -6,3 +6,30 @@
    <img src="../../../assets/images/path.svg" class="img-path"/>
    <img src="../../../assets/images/line.svg" class="img-line" />
 </div>
+<form>
+   <h1>Log-in</h1>
+   <div class =" form-control">
+       <div class= "form-control-details">
+       <label  for="email">Email ID </label><br>
+   </div>
+       <input id = "email" autocomplete = "new-password" type ="text">
+   </div>
+   <div class =" form-control">
+       <div class= "form-control-details">
+       <label for="password">Password</label><br></div>
+       <input id = "password" autocomplete = "new-password" type ="text">
+   </div>
+   <div class="form-control">
+       <a [routerLink]="['/forgotPassword']" routerLinkActive="router-link-active" >Forgot password ?</a>
+       </div>
+       <br>
+       <div class =" form-control">
+   <button class="button" type="submit">Login</button>
+   </div>
+   <div class="form-control1">
+       <div class="form-signup">
+       Don't have an account? 
+       <a [routerLink]="['/signup']" routerLinkActive="router-link-active" >Sign-up</a>
+       </div>
+   </div>
+   </form>
