--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -5,7 +5,8 @@
 </head>
 <body>
      <div class="login-app-container">
-        <img src="../../../assets/images/Person.png" />
+        <!-- <img src="../../../assets/images/Person.png" /> -->
+        <img src="../../../assets/images/Person.png" alt="person"/>
         <img src="../../../assets/images/bank.png" class="img-bank"/>
         <img src="../../../assets/images/money.png" class="img-money"/>
         <img src="../../../assets/images/note.png" class="img-note"/>
