login & forgot layouts

--- a/src/app/modules/forgot-password/forgot-password.component.html
+++ b/src/app/modules/forgot-password/forgot-password.component.html
@@ -14,14 +14,15 @@
     </div>
         <input id = "email" autocomplete = "new-password" type ="text">
     </div>
-    <div class =" form-control">
+    
+    <div class =" form-control-button">
     <button class="button">
     <a [routerLink]="['/codeverification']" routerLinkActive="router-link-active" >Send Verification code</a>
     </button>
     </div>
     <div class ="footer">
-    <div class = "footer_details">
+    <div class = "footer-details">
         <a [routerLink]="['/login']" routerLinkActive="router-link-active" >Back to login</a>
         </div>
-        </div>
+        </div>`
         </form>
