--- a/src/app/layout/login-header/login-header.component.html
+++ b/src/app/layout/login-header/login-header.component.html
@@ -23,7 +23,7 @@
        <a [routerLink]="['/forgotPassword']" routerLinkActive="router-link-active" >Forgot password ?</a>
        </div>
        <br>
-       <div class =" form-control">
+       <div class =" form-control-button">
    <button class="button" type="submit">Login</button>
    </div>
    <div class="form-control1">
