--- a/src/app/layout/login-header/login-header.component.scss
+++ b/src/app/layout/login-header/login-header.component.scss
@@ -1,9 +1,12 @@
+
 .login-app-container{
     display: none;
+   
 }
 @media (min-width: 412px) and (max-width:892px){
     .login-app-container{
         display: block;
+        
     }
     .img-path{
         position: absolute;
@@ -40,26 +43,47 @@
 
 .form-control{
     margin-bottom: 15px;
+    a{
+        color: rgba(72, 54, 153, 1);
+        text-decoration: none;
+    }
+    border: white;
 }
 .form-control1{
     margin-top: 50px;
     margin-bottom: 1px;
 
 }
+.form-control-button{
+    margin-top: 10px;
+    margin-bottom: 0px;
+    margin-left: 45px;
+    margin-right: 45px;
+}
 .form-signup{
     padding-left:75px;
 }
 .button{
     width: 100%;
-    max-height: 100px;
-    border-radius: 20px;
-    background-color: rgb(162, 91, 228);
+   // max-height: 100px;
+   height: 38px;
+   width: 323px;
+    border-radius: 18px;
+    background-color: #684EDC;
+    color: white;
+    
+    
 }
 .form-control-details{
-    color: blueviolet;
+    color: rgba(72, 54, 153, 1);
 }
+
 input[type=text]{
     border: none;
    
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgba(102, 102, 102, 1);
+}
+h1{
+    color: rgba(80, 80, 80, 1);
+    padding-bottom: 10px;
 }
