--- a/src/app/modules/forgot-password/forgot-password.component.scss
+++ b/src/app/modules/forgot-password/forgot-password.component.scss
@@ -40,24 +40,49 @@
 
 .form-control{
     margin-bottom: 15px;
-    
+    border: white;
+}
+.form-control-button{
+    padding-left: 45px;
+    padding-right: 45px;
+   padding-top: 150px;
+   padding-bottom: 13px;
 }
 .form-control-details{
-    color: blueviolet;
+    color: rgba(72, 54, 153, 1);
 }
 input[type=text]{
     border: none;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgba(102, 102, 102, 1);
 }
 .footer{
     text-align: center;  
+    a{
+        text-decoration: none;
+        color: rgba(72, 54, 153, 1);
+        margin-bottom: 48px;
+
+    }
+    .footer-details{
+        padding-bottom: 48px;
+    }
+   
+   
+    
 }
 .button{
-    width: 100%;
-    max-height: 100px;
+    width: 323px;
+    height: 38px;
     border-radius: 20px;  
     background-color: #684EDC;
     a{
         color: white;
+        text-decoration: none;
     } 
+    
 }
+
+    h1{
+        color: rgba(80, 80, 80, 1);
+       
+    }
