--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,2 +1,12 @@
-<!-- <p>login works!</p> -->
-<app-login-header></app-login-header>
+
+<div class="layout">
+    <app-login-header></app-login-header>
+    <button class="login-button" routerLink= "/auth">Log In</button>
+
+<div>
+
+    <button class="sign-up-button">Sign Up</button>
+
+</div>
+
+</div>
