--- a/src/app/otp/otp.component.html
+++ b/src/app/otp/otp.component.html
@@ -1,20 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-</head>
-<body>
-    
-   
+       
 <div>
-    <div class="login-app-container">
-        <img src="../../../assets/images/person.png" />
-        <img src="../../../assets/images/bank.png" class="img-bank"/>
-        <img src="../../../assets/images/money.png" class="img-money"/>
-        <img src="../../../assets/images/note.png" class="img-note"/>
-        <img src="../../../assets/images/path.svg" class="img-path"/>
-        <img src="../../../assets/images/line.svg" class="img-line" />
-     </div>
+    <app-login-header></app-login-header>
     <h1> Forgot Password</h1>
 <h3>Enter Code</h3>
 
@@ -33,5 +19,3 @@
     </div>
 </form>
 </div>
-</body>
-</html>
