--- a/src/app/setting-password/setting-password.component.html
+++ b/src/app/setting-password/setting-password.component.html
@@ -1,3 +1,4 @@
+<app-login-header></app-login-header>
 <h1>New Password</h1>
 
 <mat-form-field>
@@ -6,6 +7,6 @@
   </mat-form-field>
 
   <div>
-    <button class="proceed-button">Proceed</button>
+    <button class="proceed-button" >Proceed</button>
   </div>
   
