--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -1,17 +1,60 @@
+<app-login-header></app-login-header>
 
-<h4 >Login-in</h4>
- <form class="example-form">
-    <mat-form-field class="example-full-width">
-      <mat-label>Email id</mat-label>
-      <input matInput placeholder="nsindhu@gmail.com" >
-    </mat-form-field>
+<form>
+
+    <h1>Log-in</h1>
+ 
+    <div class =" form-control">
+ 
+        <div class= "form-control-details">
+ 
+        <label  for="email">Email ID </label><br>
+ 
+    </div>
+ 
+        <input id = "email" autocomplete = "new-password" type ="text">
+ 
+    </div>
+ 
+    <div class =" form-control">
+ 
+        <div class= "form-control-details">
+ 
+        <label for="password">Password</label><br></div>
+ 
+        <input id = "password" autocomplete = "new-password" type ="text">
+ 
+    </div>
+ 
+    <div class="form-control">
+ 
+        <a [routerLink]="['/forgotPassword']" routerLinkActive="router-link-active" >Forgot password ?</a>
+ 
+        </div>
+ 
+        <br>
+ 
+        <div class =" form-control-button">
+ 
+    <button class="button" type="submit">Login</button>
+ 
+    </div>
+ 
+    <div class="form-control1">
+ 
+        <div class="form-signup">
+ 
+        Don't have an account?
+ 
+        <a [routerLink]="['/signup']" routerLinkActive="router-link-active" >Sign-up</a>
+ 
+        </div>
+ 
+    </div>
+ 
+    </form>
+
   
-    <mat-form-field class="example-full-width">
-      <mat-label>Password</mat-label>
-      <textarea matInput placeholder="123"></textarea>
-    </mat-form-field>
-  </form> 
-
 
   
   
