--- a/src/app/authentication/authentication.component.scss
+++ b/src/app/authentication/authentication.component.scss
@@ -1,10 +1,94 @@
-.example-form {
-    min-width: 50px;
-    max-width: 100px;
-    width: 50%;
-  }
-  
-  .example-full-width {
+form{
+    margin-top: 430px;
+}
+.form-control{
+
+    margin-bottom: 15px;
+
+    a{
+
+        color: rgba(72, 54, 153, 1);
+
+        text-decoration: none;
+
+    }
+
+    border: white;
+
+}
+
+.form-control1{
+
+    margin-top: 50px;
+
+    margin-bottom: 1px;
+
+ 
+
+}
+
+.form-control-button{
+
+    margin-top: 10px;
+
+    margin-bottom: 0px;
+
+    margin-left: 45px;
+
+    margin-right: 45px;
+
+}
+
+.form-signup{
+
+    padding-left:75px;
+
+}
+
+.button{
+
     width: 100%;
-  }
-  
+
+   // max-height: 100px;
+
+   height: 38px;
+
+   width: 323px;
+
+    border-radius: 18px;
+
+    background-color: #684EDC;
+
+    color: white;
+
+   
+
+   
+
+}
+
+.form-control-details{
+
+    color: rgba(72, 54, 153, 1);
+
+}
+
+ 
+
+input[type=text]{
+
+    border: none;
+
+   
+
+    border-bottom: 1px solid rgba(102, 102, 102, 1);
+
+}
+
+h1{
+
+    color: rgba(80, 80, 80, 1);
+
+    padding-bottom: 10px;
+
+}
