--- a/src/app/layout/login-header/login-header.component.scss
+++ b/src/app/layout/login-header/login-header.component.scss
@@ -1,87 +1,31 @@
-// .login-app-container{
-//     display: none;
-// }
-// @media (min-width: 412px) and (max-width:892px){
-//     .login-app-container{
-//         display: block;
-//     }
-//     .img-path{
-//         position: absolute;
-//         z-index: -1;
-//         top: 80px;
-//         left: 25px;
-//     }
-//     .img-money{
-//         position: absolute;
-//         top: 55px;
-//         right: 0;
-//         width: 25%;
-//     }
-//     .img-bank{
-//         position: absolute;
-//         top: 50px;
-//         left: 10px;
-//         width: 30%;
-//     }
-//     .img-note{
-//         position: absolute;
-//         top: 300px;
-//         width: 20%;
-//         left: 90px;
-//     }
-//     .img-line{
-//         position: absolute;
-//         top: 56px;
-//         left: 123px;
-//         width: 47%;
-//     }
-// }
-
-
-// .form-control{
-//     margin-bottom: 15px;
-// }
-// .form-control1{
-//     margin-top: 50px;
-//     margin-bottom: 1px;
-
-// }
-// .form-signup{
-//     padding-left:75px;
-// }
-// .button{
-//     width: 100%;
-//     max-height: 100px;
-//     border-radius: 20px;
-//     background-color: rgb(162, 91, 228);
-// }
-// .form-control-details{
-//     color: blueviolet;
-// }
-// input[type=text]{
-//     border: none;
-   
-//     border-bottom: 1px solid black;
-// }
-
-
-
 .login-app-container{
 
     display: none;
-
-   
 
 }
 
 @media (min-width: 412px) and (max-width:892px){
 
     .login-app-container{
-
         display: block;
-
-       
-
+    }
+    
+    .images{
+        margin-top: 200px;
+    }
+    
+    p{
+        color: #684EDC;
+        size: 16px;
+        padding-top: 10px;
+        margin-left: -14px;
+    }
+     .img-wifi{
+        
+        width:100px;
+        position: absolute;
+        top: 10px;
+        right: -15px;
     }
 
     .img-path{
@@ -90,7 +34,7 @@
 
         z-index: -1;
 
-        top: 80px;
+        top: 140px;
 
         left: 25px;
 
@@ -100,7 +44,7 @@
 
         position: absolute;
 
-        top: 55px;
+        top: 122px;
 
         right: 0;
 
@@ -112,9 +56,8 @@
 
         position: absolute;
 
-        top: 50px;
-
-        left: 10px;
+        top: 139px;
+        left: 2px;
 
         width: 30%;
 
@@ -124,21 +67,28 @@
 
         position: absolute;
 
-        top: 300px;
+        top: 341px;
 
         width: 20%;
 
         left: 90px;
 
     }
+    .img-person{
 
+        position: absolute;
+    top: 110px;
+    width: 100%;
+    left: 57px;
+
+    }
     .img-line{
 
         position: absolute;
 
-        top: 56px;
+        top: 122px;
 
-        left: 123px;
+        left: 112px;
 
         width: 47%;
 
@@ -150,94 +100,3 @@
 
  
 
-.form-control{
-
-    margin-bottom: 15px;
-
-    a{
-
-        color: rgba(72, 54, 153, 1);
-
-        text-decoration: none;
-
-    }
-
-    border: white;
-
-}
-
-.form-control1{
-
-    margin-top: 50px;
-
-    margin-bottom: 1px;
-
- 
-
-}
-
-.form-control-button{
-
-    margin-top: 10px;
-
-    margin-bottom: 0px;
-
-    margin-left: 45px;
-
-    margin-right: 45px;
-
-}
-
-.form-signup{
-
-    padding-left:75px;
-
-}
-
-.button{
-
-    width: 100%;
-
-   // max-height: 100px;
-
-   height: 38px;
-
-   width: 323px;
-
-    border-radius: 18px;
-
-    background-color: #684EDC;
-
-    color: white;
-
-   
-
-   
-
-}
-
-.form-control-details{
-
-    color: rgba(72, 54, 153, 1);
-
-}
-
- 
-
-input[type=text]{
-
-    border: none;
-
-   
-
-    border-bottom: 1px solid rgba(102, 102, 102, 1);
-
-}
-
-h1{
-
-    color: rgba(80, 80, 80, 1);
-
-    padding-bottom: 10px;
-
-}
