--- a/src/app/modules/forgot-password/forgot-password.component.html
+++ b/src/app/modules/forgot-password/forgot-password.component.html
@@ -1,28 +1,39 @@
-<div class="login-app-container">
-    <img src="../../../assets/images/person.png" />
-    <img src="../../../assets/images/bank.png" class="img-bank"/>
-    <img src="../../../assets/images/money.png" class="img-money"/>
-    <img src="../../../assets/images/note.png" class="img-note"/>
-    <img src="../../../assets/images/path.svg" class="img-path"/>
-    <img src="../../../assets/images/line.svg" class="img-line" />
- </div>
- <form>
-    <h1> Forgot password</h1><br>
-    <div class =" form-control">
-        <div class= "form-control-details">
-        <label for="email">Email ID</label><br>
-    </div>
-        <input id = "email" autocomplete = "new-password" type ="text">
-    </div>
-    <div class =" form-control">
-    <button class="button">
-    <a [routerLink]="['/otp']" routerLinkActive="router-link-active" >Send Verification code</a>
-    </button>
-    </div>
+<app-login-header></app-login-header>
+<form>
+
+<h1> Forgot password</h1><br>
+
+<div class =" form-control">
+
+<div class= "form-control-details">
+
+<label for="email">Email ID</label><br>
+
+</div>
+
+    <input id = "email" autocomplete = "new-password" type ="text">
+
+</div>
+
+   <div class =" form-control-button">
+
+     <button class="button">
+
+     <a [routerLink]="['/codeverification']" routerLinkActive="router-link-active" >Send Verification code</a>
+
+     </button>
+
+     </div>
+
     <div class ="footer">
-    <div class = "footer_details">
+
+    <div class = "footer-details">
+
         <a [routerLink]="['/login']" routerLinkActive="router-link-active" >Back to login</a>
+
         </div>
-        </div>
+
+        </div>`
+
 </form>
 
