--- a/src/app/otp/otp.component.scss
+++ b/src/app/otp/otp.component.scss
@@ -20,6 +20,8 @@ body {
 h1 {
     font-size: 24px;
     margin-bottom: 20px;
+    margin-top: 450px;
+    
 }
 
 .otp-input-container {
@@ -34,7 +36,6 @@ h1 {
     border: 1px solid #ccc;
     border-radius: 5px;
     text-align: center;
-
     font-size: 18px;
     font-weight: bold;
 }
@@ -72,49 +73,13 @@ h3{
     border: none;
     height: 38px;
     width: 323px;
-    margin-top: 29px;
+    margin-top: 130px;
     color: white;
+    margin-left: 27px;
 }
 
 
-.login-app-container{
-    display: none;
-}
-@media (min-width: 412px) and (max-width:892px){
-    .login-app-container{
-        display: block;
-    }
-    .img-path{
-        position: absolute;
-        z-index: -1;
-        top: 80px;
-        left: 25px;
-    }
-    .img-money{
-        position: absolute;
-        top: 55px;
-        right: 0;
-        width: 25%;
-    }
-    .img-bank{
-        position: absolute;
-        top: 50px;
-        left: 10px;
-        width: 30%;
-    }
-    .img-note{
-        position: absolute;
-        top: 300px;
-        width: 20%;
-        left: 90px;
-    }
-    .img-line{
-        position: absolute;
-        top: 56px;
-        left: 123px;
-        width: 47%;
-    }
-}
+
 
 
 
