--- a/src/app/setting-password/setting-password.component.scss
+++ b/src/app/setting-password/setting-password.component.scss
@@ -1,6 +1,7 @@
-.New password{
+.Newpassword{
     width: 106px;
     height: 26px;
+    
 }
 
 .proceed-button{
@@ -9,6 +10,15 @@
     border: none;
     height: 38px;
     width: 323px;
-    margin-top: 29px;
+    margin-top: 140px;
     color: white;
+    margin-left: 31px;
 }
+
+h1{
+    margin-top:450px;
+}
+
+
+// proceed button : 29px;
+// width:106px;
