--- a/src/app/modules/otp/otp.component.html
+++ b/src/app/modules/otp/otp.component.html
@@ -2,9 +2,10 @@
 <div>
     <app-login-header></app-login-header>
     <h1> Forgot Password</h1>
-<h3>Enter Code</h3>
 
-<form action="verify_otp.php" method="POST">
+
+<form>
+  <label>Enter Code</label>
 <div class="otp-input-container">
 <input type="text" class="otp-input" name="digit1" maxlength="1" required>
 <input type="text" class="otp-input" name="digit2" maxlength="1" required>
