--- a/src/app/modules/otp/otp.component.scss
+++ b/src/app/modules/otp/otp.component.scss
@@ -15,13 +15,14 @@ body {
     border-radius: 5px;
     // box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     text-align: center;
+
 }
 
 h1 {
     font-size: 24px;
     margin-bottom: 20px;
     margin-top: 450px;
-    
+    margin-left: 20p;
 }
 
 .otp-input-container {
@@ -58,7 +59,7 @@ h1 {
     color: rgb(16, 16, 16);
 }
 
-h3{
+label{
     color:rgb(68, 31, 236)
 }
 
