--- a/src/app/modules/portfolio/portfolio.component.html
+++ b/src/app/modules/portfolio/portfolio.component.html
@@ -189,4 +189,16 @@
 
 
     </div>
+
+
+
+
+
+    <div class="card">
+        <div class="card-content">
+            <img routerLink="/dashboard" src="assets/images/home.png">
+            <img src="assets/images/graph.png">
+            <img src="assets/images/target.png">
+        </div>
+    </div>
 </div>
