--- a/src/app/modules/portfolio/portfolio.component.scss
+++ b/src/app/modules/portfolio/portfolio.component.scss
@@ -14,8 +14,9 @@ h6 {
     border-radius: 10px;
 
     box-shadow: 0px 0px 10px rgb(152, 152, 152);
-    margin-left: 400px;
-    margin-bottom: 80px;
+
+    overflow: auto;
+
 }
 
 .mobile-container .row .col {
@@ -128,12 +129,6 @@ hr {
     margin-right: 10px;
 }
 
-
-
-
-
-
-
 .container1 {
     display: flex;
     justify-content: center;
@@ -153,8 +148,6 @@ hr {
 
 
 }
-
-
 
 .card-body {
     line-height: 5px;
@@ -178,4 +171,32 @@ hr {
 
 .card-body p {
     margin-left: 10px;
+}
+
+
+
+.card {
+    margin-left: 130px;
+    position: fixed;
+    bottom: 50px;
+    height: 50px;
+    width: fit-content;
+    border-radius: 30px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
+
+}
+
+
+.card-content {
+    display: flex;
+    flex-direction: row;
+
+
+}
+
+.card img {
+    margin: 10px;
+
 }
