--- a/src/app/layout/login-header/login-header.component.html
+++ b/src/app/layout/login-header/login-header.component.html
@@ -6,6 +6,23 @@
    <img src="../../../assets/images/path.svg" class="img-path"/>
    <img src="../../../assets/images/line.svg" class="img-line" />
 </div>
+<div class="buttons">
+    <button class="login-button">
+    <a [routerLink]="['/login']" routerLinkActive="router-link-active" >Log In</a>
+    </button>
+   
+        
+       
+
+<div>
+
+    <button class="signup-button">Sign Up</button>
+
+</div>
+
+</div>
+
+<!--
 <form>
    <h1>Log-in</h1>
    <div class =" form-control">
@@ -33,3 +50,4 @@
        </div>
    </div>
    </form>
+-->
