--- a/src/app/layout/login-header/login-header.component.scss
+++ b/src/app/layout/login-header/login-header.component.scss
@@ -41,49 +41,51 @@
 }
 
 
-.form-control{
-    margin-bottom: 15px;
-    a{
-        color: rgba(72, 54, 153, 1);
-        text-decoration: none;
+body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
     }
-    border: white;
-}
-.form-control1{
-    margin-top: 50px;
-    margin-bottom: 1px;
-
-}
-.form-control-button{
-    margin-top: 10px;
-    margin-bottom: 0px;
-    margin-left: 45px;
-    margin-right: 45px;
-}
-.form-signup{
-    padding-left:75px;
-}
-.button{
-    width: 100%;
-   // max-height: 100px;
-   height: 38px;
-   width: 323px;
-    border-radius: 18px;
-    background-color: #684EDC;
-    color: white;
-    
-    
-}
-.form-control-details{
-    color: rgba(72, 54, 153, 1);
-}
-
-input[type=text]{
+  
+  .login-button{
+  
+    background-color: rgba(104, 78, 220, 1);
+  
+    border-radius: 20px;
+  
     border: none;
-   
-    border-bottom: 1px solid rgba(102, 102, 102, 1);
-}
-h1{
-    color: rgba(80, 80, 80, 1);
-    padding-bottom: 10px;
-}
+  
+    height: 38px;
+  
+    width: 323px;
+
+    margin-top:200px;
+    margin-left: 40px;
+
+        a{
+            color: white;
+            text-decoration: none;
+        } 
+
+
+  
+  }
+  
+  .signup-button{
+    margin-left: 40px;
+    background-color:rgba(176, 176, 176, 1);
+  
+    color:white;
+  
+    border: none;
+  
+    height: 38px;
+  
+    width: 323px;
+  
+    border-radius:20px;
+  
+    margin-top:29px;
+  
+  }
