--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
-    <app-main></app-main>
-    <!-- <app-goals></app-goals> -->
-    <app-goals-setting></app-goals-setting>
+    <app-main></app-main> 
+    <app-goals-onboarding></app-goals-onboarding>
+    <!-- <app-goals-onboarding></app-goals-onboarding> -->
+    <!-- <app-goals-setting></app-goals-setting> -->
 </div>
