--- a/src/app/objectives/goal-setting/goal-setting.component.html
+++ b/src/app/objectives/goal-setting/goal-setting.component.html
@@ -1,12 +1,19 @@
 <div class="mobile-container">
+    <img src="./assets/images/group1.png" class="img">
+
     <h3>Final Steps!</h3><br>
     <p style="color:#483699 ;">Current goals recommended for you. <br> Tap on 5 goals to proceed ahead</p>
-    <div *ngFor="let goalModel of goalModel" class="displayButton">
-        <button class="buttons">{{goalModel.goalName}}</button>
+    <div class="container">
+        <div id="ck-button" *ngFor="let item of selectedGoals">
+            <label>
+                <input type="checkbox" name="{{item.goalName}}" [(ngModel)]="item.isSelected"
+                    [disabled]="countSelectedGoals() >= maxButtons && !item.isSelected">
+                <span>{{item.goalName}}</span>
+            </label>
+        </div>
     </div>
-
     <div class="container2">
-        <button class="skipbutton"> Skip</button>
-        <button class="accountbutton">Create Account</button>
+        <button class="skipbutton">Skip</button>
+        <button class="accountbutton" type="submit" (click)="onChange(selectedGoals)">Create Account</button>
     </div>
 </div>
