--- a/src/app/objectives/goal-setting/goal-setting.component.scss
+++ b/src/app/objectives/goal-setting/goal-setting.component.scss
@@ -24,7 +24,7 @@
 .buttons {
     margin: 4px;
     border-radius: 6px;
-    background-color: white;
+    // background-color: white;
     color: #684EDC;
 }
 
@@ -43,10 +43,67 @@
     margin-left: 140px;
 }
 
-.displayButton {
-    display: inline;
+
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .container2 {
     margin-top: 200px;
+}
+
+
+div label input {
+    margin-right: 5px;
+    padding: 10px;
+}
+
+body {
+    font-family: sans-serif;
+}
+
+#ck-button {
+    margin: 4px;
+    background-color: #f7f5f5;
+    border-radius: 4px;
+    border: 1px solid #D0D0D0;
+    overflow: auto;
+    float: left;
+    position: relative;
+}
+
+#ck-button:hover {
+    background: #8369f7;
+}
+
+#ck-button label {
+    float: left;
+
+}
+
+#ck-button label span {
+    text-align: center;
+    padding: 3px 0px;
+    display: block;
+}
+
+#ck-button label input {
+    position: absolute;
+    top: -40px;
+}
+
+
+
+#ck-button label input:checked+span {
+    background-color: #8369f7;
+    color: #fff;
+}
+
+.img {
+    width: 350px;
+    height: 300px;
 }
