--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -12,12 +12,12 @@
         <div class= "form-control-details">
         <label  for="email">Email ID </label><br>
     </div>
-        <input id = "email" autocomplete = "new-password"  type ="text" [(ngModel)]="user.email" name="email">
+        <input id = "email" autocomplete = "new-password"  type ="email" [(ngModel)]="user.email" name="email" required>
     </div>
     <div class =" form-control">
         <div class= "form-control-details">
         <label for="password">Password</label><br></div>
-        <input id = "password" autocomplete = "new-password" type ="text" [(ngModel)]="user.password" name="password">
+        <input id = "password" autocomplete = "new-password" type ="password" [(ngModel)]="user.password" name="password" required>
     </div>
     <div class="form-control">
         <a [routerLink]="['/forgotPassword']" routerLinkActive="router-link-active" >Forgot password ?</a>
