--- a/src/app/modules/login/login.component.scss
+++ b/src/app/modules/login/login.component.scss
@@ -78,7 +78,7 @@
     color: rgba(72, 54, 153, 1);
 }
 
-input[type=text]{
+input{
     border: none;
    
     border-bottom: 1px solid rgba(102, 102, 102, 1);
