--- a/src/app/modules/portfolio/portfolio.component.html
+++ b/src/app/modules/portfolio/portfolio.component.html
@@ -30,7 +30,7 @@
 
             <div class="dropdown">
                 <img class="image-container"
-                    style="height:30px;width:30px;cursor:pointer;position: absolute;left:210px;bottom: 0;top: -20px;"
+                    style="height:30px;width:30px;cursor:pointer;position: absolute;left:250px;bottom: 0;top: -20px;"
                     src="assets/images/filter.png">
                 <div class="dropdown-content">
                     <a>Yearly View</a>
@@ -73,7 +73,7 @@
             <b style="font-size: 20px;margin-left: 10px;">Medium Risk</b>
             <div class="dropdown">
                 <img class="image-container"
-                    style="height:30px;cursor:pointer;position: absolute;left:160px;bottom: 0;top: -20px;"
+                    style="height:30px;cursor:pointer;position: absolute;left:220px;bottom: 0;top: -20px;"
                     src="assets/images/filter.png">
                 <div class="dropdown-content">
                     <a>Yearly View</a>
@@ -103,7 +103,7 @@
             <b style="font-size: 20px;margin-left: 10px;">Low Risk</b>
             <div class="dropdown">
                 <div class="image-container">
-                    <img style="height:30px;cursor:pointer;position: absolute;left:200px;bottom: 0;top: -20px;"
+                    <img style="height:30px;cursor:pointer;position: absolute;left:250px;bottom: 0;top: -20px;"
                         src="assets/images/filter.png">
                 </div>
                 <div class="dropdown-content">
@@ -144,14 +144,14 @@
     <hr>
 
 
-    <div style="display: flex; gap: 15px;margin-top: 20px;align-items: center;margin-left: 30px;">
+    <div style="display: flex; gap: 45px;margin-top: 30px;align-items: center;height:30px">
         <img src="assets/images/funds.png" alt="Funds">
         <img src="assets/images/Allocation.png" alt="Allocation">
         <img src="assets/images/History.png" alt="History">
         <img src="assets/images/performance.png" alt="Performance">
 
     </div>
-    <div style="display:flex;gap: 28px;font-size: 13px;margin-left: 30px;">
+    <div style="display:flex;gap: 58px;font-size: 13px;margin-left: 10px;margin-top: 20px;">
         <p>Funds</p>
         <p>Allocation</p>
         <p>History</p>
