--- a/src/app/objectives/goal-setting/goal-setting.component.html
+++ b/src/app/objectives/goal-setting/goal-setting.component.html
@@ -1,4 +1,7 @@
 <div class="mobile-container">
+    <img src="./assets/images/path.png" alt="" class="img0">
+    <img src="./assets/images/Rectangle.png" alt="" class="img1">
+    <img src="./assets/images/bank.png" alt="" class="img3">
     <h3>Final Steps!</h3><br>
     <p style="color:#483699 ;">Current goals recommended for you. <br> Tap on 5 goals to proceed ahead</p>
     <div class="container">
