--- a/src/app/objectives/goal-setting/goal-setting.component.scss
+++ b/src/app/objectives/goal-setting/goal-setting.component.scss
@@ -31,6 +31,28 @@
     margin-top: 200px;
 }
 
+.img0 {
+    margin-left: -20px;
+    height: auto;
+    width: 370px;
+
+}
+
+.img1 {
+    margin-left: 400px;
+    position: absolute;
+    top: 80px;
+    left: 40px;
+    width: 120px;
+    height: 200px;
+    // opacity: 0.7;
+}
+
+.img3 {
+    height: 100px;
+    margin-left: 250px;
+}
+
 .skipbutton {
     background-color: white;
     border: none;
