--- a/src/app/objectives/goal-setting/goal-setting.component.scss
+++ b/src/app/objectives/goal-setting/goal-setting.component.scss
@@ -31,6 +31,10 @@
     margin-top: 200px;
 }
 
+.container0 {
+    position: relative;
+}
+
 .img0 {
     margin-left: -20px;
     height: auto;
@@ -39,18 +43,32 @@
 }
 
 .img1 {
-    margin-left: 400px;
+    // margin-left: 400px;
+    // position: absolute;
+    // top: 80px;
+    // left: 40px;
+    // width: 120px;
+    // height: 200px;
+    // opacity: 0.7;
     position: absolute;
-    top: 80px;
-    left: 40px;
+    top: 30px;
+    left: 0px;
     width: 120px;
     height: 200px;
-    // opacity: 0.7;
 }
 
 .img3 {
+    position: absolute;
+    top: 80px;
+    left: 250px;
     height: 100px;
-    margin-left: 250px;
+}
+
+.img4 {
+    position: absolute;
+    top: -10px;
+    height: 55px;
+    left: 200px;
 }
 
 .skipbutton {
