--- a/src/app/modules/forgot-password/forgot-password.component.html
+++ b/src/app/modules/forgot-password/forgot-password.component.html
@@ -1,1 +1,50 @@
-<p>forgot-password works!</p>
+
+<!-- <h1>Forgot Password</h1>
+
+<form (ngSubmit)="sendVerificationCode()"> -->
+  <!-- <label for="name">Email Id: </label><br>
+<input id="name" type="text" [formControl]="name"> -->
+   <!-- <label for="email">Email ID:</label>
+  <input id="email" [(ngModel)]="email" name="email" autocomplete="new-password" type="email" > 
+   
+  <div class="form-control-button">
+    <button type="submit" class="button" routerLink= "/otp" >Send Verification Code</button>
+    
+
+  </div>
+</form>
+
+<div class="footer">
+  <div class="footer-details">
+    <a [routerLink]="['/login']" routerLinkActive="router-link-active">Back to login</a>
+  </div>
+</div> -->
+
+<h1>Forgot Password</h1>
+
+<form (ngSubmit)="sendVerificationCode()" #forgotPasswordForm="ngForm">
+  <label  for="email">Email ID:</label><br>
+  <input id="email"  [(ngModel)]="email" name="email" autocomplete="new-password" type="email" required email>
+  <!-- Display validation error message -->
+  <div class="validation">
+  <div *ngIf="forgotPasswordForm.controls['email']?.hasError('required') && forgotPasswordForm.controls['email']?.touched">
+    Email is required.
+  </div>
+  <div *ngIf="forgotPasswordForm.controls['email']?.hasError('email') && forgotPasswordForm.controls['email']?.touched">
+    Please enter a valid email address.
+  </div>
+</div>
+
+  <div class="form-control-button">
+    <button type="submit" class="button" [disabled]="!forgotPasswordForm.valid">Send Verification Code</button>
+  </div>
+</form>
+
+<div class="footer">
+  <div class="footer-details">
+     <a [routerLink]="['/login']" routerLinkActive="router-link-active"  >Back to login</a>
+  </div>
+</div>
+
+
+
