changes done in forgot-password

--- a/src/app/modules/forgot-password/forgot-password.component.html
+++ b/src/app/modules/forgot-password/forgot-password.component.html
@@ -22,7 +22,9 @@
 </div>
 
   <div class="form-control-button">
-    <button type="submit" class="button" [disabled]="!forgotPasswordForm.valid">Send Verification Code</button>
+    <!-- <button type="submit" class="button" [disabled]="!forgotPasswordForm.valid">Send Verification Code</button> -->
+    <button type="submit" class="button send-verification-button" [disabled]="!forgotPasswordForm.valid">Send Verification Code</button>
+
   </div>
 </form>
 
