--- a/src/app/modules/forgot-password/forgot-password.component.scss
+++ b/src/app/modules/forgot-password/forgot-password.component.scss
@@ -79,6 +79,9 @@ input[type=text]{
         color: white;
         text-decoration: none;
     } 
+
+
+    
     
 }
 
@@ -182,7 +185,9 @@ input[type=email]{
 
 }
 
- 
+.button.send-verification-button {
+    color: white;
+} 
 
     h1{
 
