--- a/src/app/objectives/goals/goals.component.html
+++ b/src/app/objectives/goals/goals.component.html
@@ -62,15 +62,16 @@
         </div>
         <div class="row">
             <div class="col">
-                <div class="card" style="width: 20rem;" id="card1" [ngStyle]="{ 'background-color': currentColor }">
+                <div class="card" style="width: 20rem;" id="card1" [ngStyle]="{ 'background-color': currentColor }"
+                    *ngFor="let goal of goals">
                     <div class="card-body">
                         <div class="row">
                             <div class="col">
                                 <img src="./assets/images/globe.png" alt="">
                             </div>
                             <div class="col">
-                                <span class="triptext">Trip to Maldives</span><br>
-                                <span class="triptext">2024</span><br>
+                                <span class="triptext">{{goal.goalName}}</span><br>
+                                <span class="triptext">{{goal.duration}}</span><br>
                                 <span class="triptext">$4000</span>&nbsp;
                                 <span class="triptext">$200000</span><br>
                                 <div class="progress" style="height: 5px;">
@@ -83,7 +84,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col">
                 <div class="card" style="width: 20rem;" id="card1" [ngStyle]="{ 'background-color': currentColor }">
                     <div class="card-body">
@@ -175,7 +176,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="row">
             <div class="col" id="viewbutton">
                 <button class="allbutton">View All</button>
